Commit 2: Importing the dataset

--- a/Credit Card Fraud Detection.ipynb
+++ b/Credit Card Fraud Detection.ipynb
@@ -49,6 +49,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load the Dataset from using Pandas\n",
+    "data=pd.read_csv('../creditcard.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
