Commit 3: Describing the dataset

--- a/Credit Card Fraud Detection.ipynb
+++ b/Credit Card Fraud Detection.ipynb
@@ -219,15 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-27-1a5026e5852d>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-27-1a5026e5852d>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    Fraud=data[data['Class']==1]\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0017234102419808666\n",
+      "Fraud Cases:49\n",
+      "Valid Cases:28432\n"
      ]
     }
    ],
@@ -239,7 +240,8 @@
     "outlier_fraction=len(Fraud)/float(len(Valid))\n",
     "print(outlier_fraction)\n",
     "\n",
-    "print()"
+    "print(\"Fraud Cases: {}\".format(len(Fraud)))\n",
+    "print(\"Valid Cases:{}\".format(len(Valid)))"
    ]
   },
   {
