--- a/Credit Card Fraud Detection.ipynb
+++ b/Credit Card Fraud Detection.ipynb
@@ -331,6 +331,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\iforest.py:247: FutureWarning: behaviour=\"old\" is deprecated and will be removed in version 0.22. Please use behaviour=\"new\", which makes the decision_function change to match other anomaly detection algorithm API.\n",
+      "  FutureWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\iforest.py:247: FutureWarning: behaviour=\"old\" is deprecated and will be removed in version 0.22. Please use behaviour=\"new\", which makes the decision_function change to match other anomaly detection algorithm API.\n",
+      "  FutureWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\iforest.py:415: DeprecationWarning: threshold_ attribute is deprecated in 0.20 and will be removed in 0.22.\n",
+      "  \" be removed in 0.22.\", DeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Isolation Forest:71\n",
+      "0.99750711000316\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     28432\n",
+      "           1       0.28      0.29      0.28        49\n",
+      "\n",
+      "    accuracy                           1.00     28481\n",
+      "   macro avg       0.64      0.64      0.64     28481\n",
+      "weighted avg       1.00      1.00      1.00     28481\n",
+      "\n",
+      "Local Outlier Factor:97\n",
+      "0.9965942207085425\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     28432\n",
+      "           1       0.02      0.02      0.02        49\n",
+      "\n",
+      "    accuracy                           1.00     28481\n",
+      "   macro avg       0.51      0.51      0.51     28481\n",
+      "weighted avg       1.00      1.00      1.00     28481\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Fitting the models\n",
+    "n_outliers=len(Fraud)\n",
+    "for i , (clf_name,clf) in enumerate(classifiers.items()):\n",
+    "    #Fit the data and tag the outlier\n",
+    "    if(clf_name==\"Local Outlier Factor\"):\n",
+    "       y_pred= clf.fit_predict(X)\n",
+    "       scores_pred=clf.negative_outlier_factor_\n",
+    "    else:\n",
+    "       clf.fit(X)\n",
+    "       scores_pred= clf.decision_function(X)\n",
+    "       y_pred= clf.fit_predict(X)\n",
+    "       \n",
+    "    #Reshape the Prediction values to 0 for Valid and 1 for Fraud\n",
+    "    y_pred[y_pred==1]=0\n",
+    "    y_pred[y_pred==-1]=1\n",
+    "       \n",
+    "    n_errors= (y_pred!=Y).sum()\n",
+    "    \n",
+    "    #Run Classification Matrix\n",
+    "    print('{}:{}'.format(clf_name,n_errors))\n",
+    "       \n",
+    "    #For Printing Accuracy Score\n",
+    "    print(accuracy_score(Y,y_pred))\n",
+    "    print(classification_report(Y,y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
